# my-first-test-repo

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  bun.lockb  conandata.yml  main.cpp  package.json
arrays/: binary-search.cpp  binary-search.ts  find-duplicates.md  find-duplicates.ts  group-anagrams.cpp  group-anagrams.md  group-anagrams.ts  has-duplicate.cpp  has-duplicate.md  has-duplicate.ts  top-k-frequent.ts  two-sum.cpp  two-sum.md  two-sum.ts
common/: utils.cpp  utils.ts
i/: algo.h  mitata.hpp  util.h  utils.h
sorting/: quicksort.ts
trees/: cmp-trees.ts
